Testing change to pyproject.toml to trigger automatic packaging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ name = "plastburstalign"
 description = "A Python tool to extract and align genes, introns, and intergenic spacers across hundreds of plastid genomes using associative arrays"
 authors = [
     {name = "Michael Gruenstaeudl, PhD", email = "m_gruenstaeudl@fhsu.edu"}
+    {name = "Gregory Smith", email = "g_smith10@mail.fhsu.edu"}
 ]
-version = "0.9.0"
+version = "0.9.1"
 
 requires-python = ">= 3.9"
 dependencies = [
