--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 name = "plastburstalign"
 description = "A Python tool to extract and align genes, introns, and intergenic spacers across hundreds of plastid genomes using associative arrays"
 authors = [
-    {name = "Michael Gruenstaeudl, PhD", email = "m_gruenstaeudl@fhsu.edu"}
+    {name = "Michael Gruenstaeudl, PhD", email = "m_gruenstaeudl@fhsu.edu"},
     {name = "Gregory Smith", email = "g_smith10@mail.fhsu.edu"}
 ]
 version = "0.9.1"
