--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -14,6 +14,7 @@ name: build-and-publish
 jobs:
   build:
     name: Build distribution 📦
+    if: github.repository == 'michaelgruenstaeudl/PlastomeBurstAndAlign'
     runs-on: ubuntu-latest
 
     steps:
@@ -43,7 +44,6 @@ jobs:
   publish-to-pypi:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
-    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     needs:
       - build
     runs-on: ubuntu-latest
